SET (DRIVERNAME "gtts")
SET (LIBDEST "/usr/local/lib64/")

CMAKE_MINIMUM_REQUIRED (VERSION 2.4 FATAL_ERROR)

PROJECT (${DRIVERNAME})

SET (CMAKE_MODULE_PATH "/usr/local/share/cmake/Modules")
INCLUDE (UsePlayerPlugin)

PLAYER_ADD_PLUGIN_DRIVER (${DRIVERNAME} SOURCES ${DRIVERNAME}.cc) 
TARGET_LINK_LIBRARIES (${DRIVERNAME} -lcurl) 
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${DRIVERNAME}.so DESTINATION ${LIBDEST}) 
