SET(THE_TARGET "Raspicam_driver")
SET(LIBDEST "/opt/player-stage/src/player-3.0.2/build/examples/plugins/")
#SET(LIBDEST "$ENV{DONNIE_PATH}/lib/player/")



CMAKE_MINIMUM_REQUIRED (VERSION 2.4 FATAL_ERROR)
PROJECT (${THE_TARGET})

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /usr/local/lib/cmake/)
FIND_PACKAGE(raspicam REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
IF(OpenCV_FOUND)
	MESSAGE(STATUS "OPENCV Found !")
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()

IF(raspicam_CV_FOUND)
	MESSAGE(STATUS "RASPICAM Found !")
ELSE()
	MESSAGE(FATAL_ERROR "RASPICAM NOT FOUND IN YOUR SYSTEM")
ENDIF()

# Include this CMake module to get most of the settings needed to build
SET (CMAKE_MODULE_PATH "@CMAKE_INSTALL_PREFIX@/share/cmake/Modules")
INCLUDE (UsePlayerPlugin)

PLAYER_ADD_PLUGIN_DRIVER (${THE_TARGET} SOURCES ${THE_TARGET}.cc)

INCLUDE_DIRECTORIES (${PLAYERCORE_EXTRA_INCLUDE_DIRS})
LINK_DIRECTORIES (${PLAYERCORE_EXTRA_LINK_DIRS})
ADD_LIBRARY (${THE_TARGET} SHARED ${THE_TARGET}.cc)
TARGET_LINK_LIBRARIES (${THE_TARGET} playercore ${raspicam_CV_LIBS})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${THE_TARGET}.so DESTINATION ${LIBDEST}${THE_TARGET}) 

